--- a/src/Encrypt.form
+++ b/src/Encrypt.form
@@ -13,7 +13,9 @@
       <grid id="2ec3d" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="400" height="100"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -30,36 +32,63 @@
               <text value="Vybrat místo uložení"/>
             </properties>
           </component>
-          <component id="b26c0" class="javax.swing.JTextField" binding="messageToEncrypt">
+          <component id="b26c0" class="javax.swing.JTextArea" binding="messageToEncrypt">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="100" height="100"/>
+              </grid>
             </constraints>
             <properties>
               <font size="16"/>
+              <lineWrap value="true"/>
             </properties>
           </component>
-          <grid id="67619" binding="checkPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="67619" binding="checkPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="2b98" class="javax.swing.JCheckBox" binding="checkNormalAlphabet">
+              <component id="2d4fe" class="javax.swing.JCheckBox" binding="checkAdvancedCzechAlphabet">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Použít standartní českou abecedu - Z42"/>
-                </properties>
-              </component>
-              <component id="2d4fe" class="javax.swing.JCheckBox" binding="checkAdvancedAlphabet">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Použít rozšířenou českou abecedu"/>
+                </properties>
+              </component>
+              <component id="6e09" class="javax.swing.JCheckBox" binding="checkNormalSlovakAlphabet">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Použít standartní slovenskou abecedu"/>
+                </properties>
+              </component>
+              <component id="322f6" class="javax.swing.JCheckBox" binding="checkAdvancedSlovakAlphabet">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Použít rozšířenou slovenskou abecedu"/>
+                </properties>
+              </component>
+              <component id="b36da" class="javax.swing.JCheckBox" binding="checkNormalEnglishAlphabet">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Použít standartní anglickou abecedu"/>
+                </properties>
+              </component>
+              <component id="2b98" class="javax.swing.JCheckBox" binding="checkNormalCzechAlphabet">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Použít standartní českou abecedu"/>
                 </properties>
               </component>
             </children>
@@ -88,6 +117,8 @@
             </constraints>
             <properties>
               <font size="16"/>
+              <text value=""/>
+              <toolTipText value="výchozí hodnota je 1"/>
             </properties>
           </component>
           <component id="de541" class="javax.swing.JLabel">
@@ -105,6 +136,8 @@
             </constraints>
             <properties>
               <font size="16"/>
+              <text value=""/>
+              <toolTipText value="výchozí hodnota je 1"/>
             </properties>
           </component>
         </children>
