--- a/src/EncryptionOrDecryption.form
+++ b/src/EncryptionOrDecryption.form
@@ -16,23 +16,23 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="8df6e" class="javax.swing.JButton" binding="decryption">
+          <component id="8df6e" class="javax.swing.JButton" binding="decryptButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="16"/>
               <hideActionText value="false"/>
-              <text value="Decryption"/>
+              <text value="Dekryptovat"/>
             </properties>
           </component>
-          <component id="64e5" class="javax.swing.JButton" binding="encryption">
+          <component id="64e5" class="javax.swing.JButton" binding="encryptButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="16"/>
-              <text value="Encryption"/>
+              <text value="Enkryptovat"/>
             </properties>
           </component>
         </children>
